spring security was added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,11 @@ spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+jwt.access.secret.key=${JWT_ACCESS_KEY}
+jwt.access.available.time=${JWT_ACCESS_AVAILABLE_TIME}
+jwt.refresh.secret.key=${JWT_REFRESH_KEY}
+jwt.refresh.available.time=${JWT_REFRESH_AVAILABLE_TIME}
+
 spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
 
