--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ jwt.access.available.time=${JWT_ACCESS_AVAILABLE_TIME}
 jwt.refresh.secret.key=${JWT_REFRESH_KEY}
 jwt.refresh.available.time=${JWT_REFRESH_AVAILABLE_TIME}
 
+hash.seed=${HASH_SEED}
+
 spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
 
