bcrypt was changed to argon2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,10 @@ jwt.access.available.time=${JWT_ACCESS_AVAILABLE_TIME}
 jwt.refresh.secret.key=${JWT_REFRESH_KEY}
 jwt.refresh.available.time=${JWT_REFRESH_AVAILABLE_TIME}
 
-hash.seed=${HASH_SEED}
+hash.salt.length=${SALT_LENGTH}
+hash.hash.length=${HASH_LENGTH}
+hash.memory=${HASH_MEMORY}
+hash.iterations=${HASH_ITERATIONS}
 
 spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
