improvement: add dek. Without KEK wrapping

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,18 @@
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.url=jdbc:postgresql://localhost:5432/lab5_6
+spring.datasource.password=pg
+spring.datasource.username=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-jwt.access.secret.key=${JWT_ACCESS_KEY}
-jwt.access.available.time=${JWT_ACCESS_AVAILABLE_TIME}
-jwt.refresh.secret.key=${JWT_REFRESH_KEY}
-jwt.refresh.available.time=${JWT_REFRESH_AVAILABLE_TIME}
+jwt.access.secret.key=imperium
+jwt.access.available.time=54000
+jwt.refresh.secret.key=menkind
+jwt.refresh.available.time=5400000
 
-hash.salt.length=${SALT_LENGTH}
-hash.hash.length=${HASH_LENGTH}
-hash.memory=${HASH_MEMORY}
-hash.iterations=${HASH_ITERATIONS}
+hash.salt.length=16
+hash.hash.length=32
+hash.memory=1048576
+hash.iterations=4
 
 spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
